<resources>
    <string name="activity_not_found">Application is not installed</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="application_name">TouchWiz Home</string>
    <string name="cancel_action">Cancel</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="long_press_widget_to_add">Tap and hold a widget to move it.</string>
    <string name="menu_item_add_item">Add to home screen</string>
    <string name="menu_search">Search</string>
    <string name="out_of_space">Maximum number of items on page reached.</string>
    <string name="shortcut_duplicate">Shortcut %s already exists.</string>
    <string name="shortcut_installed">Shortcut to %s added on home screen.</string>
    <string name="shortcut_uninstalled">Shortcut %s was removed</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="Long_press_on_any_widget">Tap and hold the widget that you want to add.</string>
    <string name="Move_to_folder_tts">Move to folder</string>
    <string name="SS_A_TO_Z_TBOPT">A to Z</string>
    <string name="SS_A_Z_ABB">A-Z</string>
    <string name="SS_SEARCH_HISTORY_HEADER_ABB">Search history</string>
    <string name="SS_SORT_ALPHABETICALLY_HEADER_ABB">Sort alphabetically</string>
    <string name="SS_THE_APP_LIST_WILL_BE_REARRANGED_IN_ALPHABETICAL_ORDER_ANY_CUSTOMISATIONS_YOU_HAVE_MADE_WILL_BE_DISCARDED">The App list will be rearranged in alphabetical order. Any customisations you have made will be discarded.</string>
    <string name="Tap_on_widgets_tab">Select the Widgets tab.</string>
    <string name="Wallpaper_chooser_wallpapers">Wallpapers</string>
    <string name="Zeropage_permission_content">Unable to use %s properly. Tap SETTINGS, go to App info > Permissions, then allow the following permissions and try again. If you do not allow these permissions, touch interaction may not be represented properly on the screen.</string>
    <string name="Zeropage_permission_setting">Settings</string>
    <string name="Zeropage_permission_skip">Skip</string>
    <string name="Zeropage_permission_storage">Storage</string>
    <string name="accessibility_add_home_screen">Add page</string>
    <string name="accessibility_button">Button</string>
    <string name="accessibility_open_home_screen_page_edit">Mode switched to Page edit mode.</string>
    <string name="activity_not_found_while_safemode">Downloaded apps disabled while Safe mode enabled.</string>
    <string name="add_to_home_msg">Tap and hold an item to move it to the home screen</string>
    <string name="all_apps_title">Apps</string>
    <string name="alphabetical_list_indicator_ampersand_indexes">&amp;ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="alphabetical_list_indicator_indexes">\#ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="app_hidden_toast">%s hidden.</string>
    <string name="app_locked_toast">%s locked.</string>
    <string name="app_search">Search</string>
    <string name="app_search_no_apps">You can add shortcuts on the home screen from the search results.</string>
    <string name="app_search_no_results_found">No results found</string>
    <string name="app_unlocked_toast">%s unlocked.</string>
    <string name="apply">Apply</string>
    <string name="available_galaxyapps">Available in Galaxy Apps</string>
    <string name="badge_manage_explain">Turn off the toggle switch next to an app to hide badge from it.</string>
    <string name="badge_manage_summary">Restrict apps to display a badge</string>
    <string name="badge_manage_title">Manage badge of apps</string>
    <string name="cancel">Cancel</string>
    <string name="change_home_screen_settings">Change home screen settings</string>
    <string name="change_home_screen_settings_info">This app can change your home screen settings and shortcuts.</string>
    <string name="clear_badge_text">Remove badge</string>
    <string name="cling_do_not_show_again">Do not show again</string>
    <string name="cling_ok">OK</string>
    <string name="content_description_hand">Point to touch</string>
    <string name="create_folder_dialog_msg">Enter folder name</string>
    <string name="default_page">Default page</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="direct_dial">Direct Dial</string>
    <string name="direct_message">Direct Message</string>
    <string name="disable_message">%1$s and all the functions related to it will be disabled. To enable the app again, go to Settings > Applications, then select %2$s.</string>
    <string name="disable_message_att">%s and all the features related to it will be disabled. To enable it again, go to Settings > Device > Applications > Application manager.</string>
    <string name="disable_message_vzw">%s and all the features related to it will be disabled. To enable it again, go to Settings > Applications > Application manager.</string>
    <string name="disable_messange_knox">%s and all the features related to it will be disabled. To enable it again, go to KNOX Settings > Application manager</string>
    <string name="disable_title">Disable application</string>
    <string name="disable_uninstall_message">%s and all the features related to it will be disabled. Your data will also be deleted. To enable it again, go to Settings > Applications > Application manager.</string>
    <string name="disable_uninstall_reset">Reset</string>
    <string name="disabled">Disabled</string>
    <string name="duplcation_widget_instance_allowed_differ_type">Widget that contains weather information already added to home screen. Remove %s and try again.</string>
    <string name="enabled">Enabled</string>
    <string name="folder">Folder</string>
    <string name="folder_add_app">Add apps to folder</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_color">Folder colour</string>
    <string name="folder_color_2">Colour 2</string>
    <string name="folder_color_3">Colour 3</string>
    <string name="folder_color_4">Colour 4</string>
    <string name="folder_color_5">Colour 5</string>
    <string name="folder_color_blue">blue</string>
    <string name="folder_color_changed">Changed to %s</string>
    <string name="folder_color_default">Default folder colour</string>
    <string name="folder_color_green">green</string>
    <string name="folder_color_orange">orange</string>
    <string name="folder_color_yellow">yellow</string>
    <string name="folder_facebook">Social</string>
    <string name="folder_microsoft_apps">Microsoft Apps</string>
    <string name="folder_opened">Folder opened</string>
    <string name="guide_remove_items_delete">Drag the item to the recycle bin to remove it from the home screen.</string>
    <string name="guide_resize_widget_step2">Pull the border up, down, in, or out, to resize the widget.</string>
    <string name="guide_tap_here">Tap the apps icon.</string>
    <string name="guide_widgets_tap_area">Tap and hold a widget until it can be edited, then release it.</string>
    <string name="hide">Hide</string>
    <string name="hide_confirm_continue">Continue</string>
    <string name="hide_confirm_message">The %s app is currently locked. If you hide this app, it will be unlocked.</string>
    <string name="hide_confirm_title">Hide app</string>
    <string name="home_edit_add_to_personal">Add to personal</string>
    <string name="home_edit_bar_delete_title">Remove shortcut</string>
    <string name="home_edit_bar_delete_title_vzw">Remove shortcut</string>
    <string name="home_edit_bar_uninstall_title">Uninstall</string>
    <string name="home_icon_auto_align">Align items</string>
    <string name="home_screen_content">Home screen content</string>
    <string name="home_screen_mode_apps">Show separate Apps screen</string>
    <string name="home_screen_mode_change_to_apps_alert">A separate Apps screen will be created so that you can easily find your most important apps via the Apps icon on the home screen. Any customisations you have previously made to the home screen will be discarded.</string>
    <string name="home_screen_mode_change_to_only_home_alert">All your apps will be shown on the home screen. Any customisations you have previously made to the home screen will be discarded.</string>
    <string name="home_screen_mode_only_home">Show all apps on home screen</string>
    <string name="homes_screen_settings">Home screen settings</string>
    <string name="item_added">Item added.</string>
    <string name="item_moved">Item moved.</string>
    <string name="item_moved_to_other_page">Item moved to home screen %1$d of %2$d.</string>
    <string name="item_removed">Item removed.</string>
    <string name="labs_alert_description">Show all your apps on the home screen instead of the Apps screen.</string>
    <string name="last_page">Current page is last page.</string>
    <string name="lock">Lock</string>
    <string name="lock_or_unlock_dislog_msg">After moving this app out of the folder, keep the app locked or unlock it?</string>
    <string name="max_characters_available">Up to %d characters available</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_edit_cancel">Cancel</string>
    <string name="menu_edit_cancel_msg">All changes will be discarded</string>
    <string name="menu_edit_done">DONE</string>
    <string name="menu_edit_mode">Edit mode</string>
    <string name="menu_edit_save">Save</string>
    <string name="menu_item_add_item_title">Home screen</string>
    <string name="menu_item_folder">Folder</string>
    <string name="menu_navigate_up">Navigate up</string>
    <string name="menu_new_page_created_toast">Page added.</string>
    <string name="menu_tab_download">Downloaded apps</string>
    <string name="menu_uninstall">Uninstall app</string>
    <string name="move_apps">Move apps</string>
    <string name="move_apps_cannot_add_to_tray">Cannot add widget to tray.</string>
    <string name="move_apps_help_btn_next">NEXT</string>
    <string name="move_apps_help_btn_ok">OK</string>
    <string name="move_apps_help_text">Tap or drag items here to reorder them.</string>
    <string name="move_apps_intro">Tap or drag items to move them to another page.</string>
    <string name="move_apps_item_max_limit_msg">Maximum number of apps that can be selected to be moved (%d) reached.</string>
    <string name="move_apps_unable_to_add_folder">Cannot add folder to another folder.</string>
    <string name="msg_disabled_store">Unable to open %s. The app is disabled. To enable it, tap SETTINGS.</string>
    <string name="multiselection_search">Search Apps</string>
    <string name="new_item">1 new item</string>
    <string name="new_items">%d new items</string>
    <string name="no_downloaded_apps">No downloaded applications</string>
    <string name="no_room_any_page">No room on any page.</string>
    <string name="no_space_page">No space on page. Try adding shortcut to a different page.</string>
    <string name="no_space_page_for_widget">No space on this page.</string>
    <string name="not_selected">Not selected</string>
    <string name="ok">OK</string>
    <string name="only_one_widget_instance_allowed">%s widget already added to home screen.</string>
    <string name="open_folder">Open folder</string>
    <string name="open_folder_VZW">View apps</string>
    <string name="option_menu_contact_up">Contact us</string>
    <string name="option_tray_screengrid">Screen grid</string>
    <string name="options_home_set_theme">Themes</string>
    <string name="options_home_set_wallpapers_and_themes">Wallpapers and themes</string>
    <string name="options_menu">More options</string>
    <string name="search_for_apps">Search for apps</string>
    <string name="search_result_found">%d found</string>
    <string name="uninstall_cancel">Cancel</string>
    <string name="unlock">Unlock</string>
    <string name="options_menu_disableApp">@string/quickoptions_disable</string>
</resources>