<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="end|center|top" android:orientation="horizontal" android:background="@drawable/home_folder_colorpicker_bg" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/open_folder_title_colorpicker_layout_margin_top_new" android:layout_marginBottom="@dimen/open_folder_title_colorpicker_layout_margin_bottom" android:layout_marginStart="@dimen/open_folder_title_colorpicker_layout_margin_left_new" android:layout_marginEnd="@dimen/open_folder_title_colorpicker_layout_margin_right_new"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/folder_color_1" android:background="@drawable/folder_colorpicker_white" android:focusable="true" android:layout_width="@dimen/open_folder_title_colorpicker_img_size" android:layout_height="@dimen/open_folder_title_colorpicker_img_size" android:foreground="@drawable/home_folder_colorpicker_selector_color_stroke" android:src="@drawable/home_bg_select" android:scaleType="fitCenter" android:contentDescription="@string/folder_color_default" />
    <ImageView android:id="@id/folder_color_2" android:background="@drawable/folder_colorpicker_blue" android:focusable="true" android:layout_width="@dimen/open_folder_title_colorpicker_img_size" android:layout_height="@dimen/open_folder_title_colorpicker_img_size" android:foreground="@drawable/home_folder_colorpicker_selector_color_stroke" android:scaleType="fitCenter" android:contentDescription="@string/folder_color_2" android:layout_marginStart="@dimen/open_folder_title_colorpicker_img_gap_x_new" />
    <ImageView android:id="@id/folder_color_3" android:background="@drawable/folder_colorpicker_green" android:focusable="true" android:layout_width="@dimen/open_folder_title_colorpicker_img_size" android:layout_height="@dimen/open_folder_title_colorpicker_img_size" android:foreground="@drawable/home_folder_colorpicker_selector_color_stroke" android:scaleType="fitCenter" android:contentDescription="@string/folder_color_3" android:layout_marginStart="@dimen/open_folder_title_colorpicker_img_gap_x_new" />
    <ImageView android:id="@id/folder_color_4" android:background="@drawable/folder_colorpicker_orange" android:focusable="true" android:layout_width="@dimen/open_folder_title_colorpicker_img_size" android:layout_height="@dimen/open_folder_title_colorpicker_img_size" android:foreground="@drawable/home_folder_colorpicker_selector_color_stroke" android:scaleType="fitCenter" android:contentDescription="@string/folder_color_4" android:layout_marginStart="@dimen/open_folder_title_colorpicker_img_gap_x_new" />
    <ImageView android:id="@id/folder_color_5" android:background="@drawable/folder_colorpicker_yellow" android:focusable="true" android:layout_width="@dimen/open_folder_title_colorpicker_img_size" android:layout_height="@dimen/open_folder_title_colorpicker_img_size" android:foreground="@drawable/home_folder_colorpicker_selector_color_stroke" android:scaleType="fitCenter" android:contentDescription="@string/folder_color_5" android:layout_marginStart="@dimen/open_folder_title_colorpicker_img_gap_x_new" />
</LinearLayout>