<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:id="@id/mode_home_only" android:background="?android:listChoiceBackgroundIndicator" android:paddingLeft="@dimen/home_settings_mode_list_margin_left" android:paddingRight="@dimen/home_settings_mode_list_margin_left" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?android:listPreferredItemHeightSmall">
            <RadioButton android:gravity="center_vertical" android:id="@id/mode_home_only_radio" android:background="@null" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_screen_mode_only_home" android:paddingStart="@dimen/home_settings_mode_list_margin_left" style="?android:attr/textAppearanceListItem" />
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/home_settings_mode_divider_margin_left">
            <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="1.0px" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:id="@id/mode_apps" android:background="?android:listChoiceBackgroundIndicator" android:paddingLeft="@dimen/home_settings_mode_list_margin_left" android:paddingRight="@dimen/home_settings_mode_list_margin_left" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?android:listPreferredItemHeightSmall">
            <RadioButton android:gravity="center_vertical" android:id="@id/mode_apps_radio" android:background="@null" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_screen_mode_apps" android:paddingStart="@dimen/home_settings_mode_list_margin_left" style="?android:attr/textAppearanceListItem" />
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/home_settings_mode_divider_margin_left">
            <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="1.0px" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:layout_gravity="bottom" android:orientation="horizontal" android:background="@drawable/tw_ab_bottom_transparent_mtrl" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="@dimen/home_settings_apply_btn_height" android:layout_alignParentBottom="true">
        <Button android:textSize="@dimen/home_settings_apply_btn_text_size" android:textColor="@color/homescreen_mode_apply_text_color" android:gravity="center" android:id="@id/mode_apply_btn" android:background="@drawable/ripple_drawable" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/apply" android:textAllCaps="true" android:fontFamily="Roboto_Regular" />
    </LinearLayout>
</FrameLayout>