<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/action_select_checkbox_layout" android:visibility="gone" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="@dimen/folder_multi_title_layout_height">
        <TextView android:textSize="@dimen/folder_multi_title_count_text_size" android:textStyle="bold" android:textColor="@color/selectcount_text_color" android:gravity="start|center" android:id="@id/select_count_text" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:fontFamily="sec-roboto-condensed" android:layout_marginStart="@dimen/folder_multi_title_gap_x" android:layout_marginEnd="@dimen/folder_multi_title_gap_x" />
        <include layout="@layout/add_button" />
    </LinearLayout>
    <SearchView android:textColor="@color/selectcount_text_color" android:layout_gravity="center" android:id="@id/search_app_input" android:layout_width="fill_parent" android:layout_height="@dimen/folder_multi_search_bar_layout_height" android:inputType="text" android:imeOptions="actionSearch|flagNoExtractUi" android:queryHint="@string/search_for_apps" android:fontFamily="Roboto_Regular" />
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/search_result_bar" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/folder_multi_header_margin_bottom" android:layout_marginStart="@dimen/folder_multi_header_margin_start" android:layout_marginEnd="@dimen/folder_multi_header_margin_start">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/folder_multi_header_text_height">
            <TextView android:textSize="@dimen/folder_multi_header_text_size" android:textStyle="bold" android:textColor="@color/selectcount_text_color" android:layout_gravity="center_vertical" android:id="@id/search_result_apps" android:padding="@dimen/folder_multi_header_text_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/all_apps_title" android:shadowColor="#33000000" android:shadowDy="3.0" android:shadowRadius="2.0" android:importantForAccessibility="no" android:fontFamily="sec-roboto-condensed" android:layout_marginEnd="@dimen/folder_header_line_margin" android:layout_alignParentStart="true" />
            <FrameLayout android:layout_gravity="center_vertical" android:id="@id/search_alpabetical_header" android:background="@color/header" android:layout_width="wrap_content" android:layout_height="@dimen/folder_multi_header_line_height" android:layout_marginBottom="1.0dip" android:layout_weight="1.0" android:alpha="0.7" android:importantForAccessibility="no" />
            <TextView android:textSize="@dimen/folder_search_result_text_size" android:textColor="@color/selectcount_text_color" android:layout_gravity="center_vertical" android:id="@id/search_result_text" android:padding="@dimen/folder_multi_header_text_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search_result_found" android:importantForAccessibility="no" android:fontFamily="sec-roboto-condensed" android:layout_marginStart="@dimen/folder_header_line_margin" android:layout_alignParentEnd="true" />
        </LinearLayout>
    </LinearLayout>
    <com.android.launcher2.searchapp.AlphabeticalListContainer android:id="@id/listcontainer" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent" launcher:indexGravity="1" launcher:popupWidth="@dimen/folder_multi_fast_scroll_popup_width" launcher:popupHeight="@dimen/folder_multi_fast_scroll_popup_height" launcher:popupWidthInc="@dimen/folder_multi_fast_scroll_popup_width_inc" launcher:popupHeightInc="@dimen/folder_multi_fast_scroll_popup_height_inc" launcher:firstCharColor="@color/search_app_name_highlight_color"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:launcher="http://schemas.android.com/apk/res/com.sec.android.app.launcher">
        <ListView android:id="@id/listview_container" android:scrollbars="none" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:listSelector="@android:color/transparent" android:divider="#ffffffff" android:dividerHeight="0.0px" />
        <com.android.launcher2.searchapp.AlphabeticalListIndicator android:id="@id/index_view_root" android:paddingTop="@dimen/folder_multi_fast_scroll_level0_padding_top" android:paddingBottom="@dimen/folder_multi_fast_scroll_level0_padding_bottom" android:visibility="visible" android:layout_width="@dimen/folder_multi_fast_scroll_level0_width" android:layout_height="wrap_content" android:paddingStart="@dimen/folder_multi_fast_scroll_level0_padding_left" android:paddingEnd="@dimen/folder_multi_fast_scroll_level0_padding_right" launcher:pressDelay="300" launcher:unpressDelay="1000" launcher:overflowGrpSepChar="." launcher:firstCharPreMatches="true" launcher:textUppercase="true" launcher:indexNormalBg="@drawable/tw_scrollbar_handle_right_bg_mtrl" launcher:indexSelBg="@drawable/tw_scrollbar_handle_right_bg_mtrl" launcher:indexSelItemBg="@drawable/tw_scrollbar_handle_right_bg_mtrl" launcher:textColor="#7fffffff" launcher:selTextColor="#ff0094b0" launcher:textTypeface="default" launcher:textTypefaceStyle="0" launcher:indexStr="@string/alphabetical_list_indicator_ampersand_indexes" launcher:textFontSize="@dimen/folder_multi_fast_scroll_level0_font_size" launcher:bgFullHeight="true" launcher:cellHeight="@dimen/folder_multi_fast_scroll_level0_cell_height" />
        <com.android.launcher2.searchapp.AlphabeticalListTextPopup android:id="@id/index_sel_view" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/folder_multi_fast_scroll_popup_width" android:minHeight="@dimen/folder_multi_fast_scroll_popup_height" launcher:textUppercase="true" launcher:textColor="@color/index_sel_view_color" launcher:textTypeface="default" launcher:textTypefaceStyle="0" launcher:textFontSize="@dimen/folder_multi_fast_scroll_popup_font_size" launcher:textBg="@drawable/tw_scroll_popup_bg_holo_light" launcher:textCharSpacingStrategy="0" />
    </com.android.launcher2.searchapp.AlphabeticalListContainer>
    <com.android.launcher2.searchapp.AlphabeticalSearchListContainer android:id="@id/search_container" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent" launcher:indexGravity="1" launcher:popupWidth="@dimen/folder_multi_fast_scroll_popup_width" launcher:popupHeight="@dimen/folder_multi_fast_scroll_popup_height" launcher:popupWidthInc="@dimen/folder_multi_fast_scroll_popup_width_inc" launcher:popupHeightInc="@dimen/folder_multi_fast_scroll_popup_height_inc" launcher:firstCharColor="@color/search_app_name_highlight_color"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:launcher="http://schemas.android.com/apk/res/com.sec.android.app.launcher">
        <ListView android:id="@id/search_list" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:listSelector="@android:color/transparent" android:divider="#ffcecece" />
    </com.android.launcher2.searchapp.AlphabeticalSearchListContainer>
    <LinearLayout android:gravity="center" android:id="@id/no_result_text_layout" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="@dimen/appsearch_font_size" android:textColor="#fffafafa" android:gravity="center" android:id="@id/no_result_text" android:focusable="false" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_search_no_results_found" android:fontFamily="Roboto_Regular" />
    </LinearLayout>
</LinearLayout>